<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Cards</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="settings">Settings</string>
	<string name="leaderboard">Leaderboard</string>
	<string name="achievements">Achievements</string>
	<string name="play">Play</string>
	<string name="get_started">Get Started</string>
	<string name="content_description">Description</string>
	<string name="choose">Choose a category</string>
	<string name="choose_level">Choose a level</string>
	<string name="loading_questions">Loading questions</string>
	<string name="score_text">Score</string>
	<string name="correct">Correct!</string>
	<string name="wrong">Wrong!</string>
	<string name="next">Next</string>
	<string name="resume">Resume</string>
	<string name="back">Back to menu</string>
	<string name="replay">Play again</string>
	<string name="share">Share</string>
	<string name="highscores">Highscores</string>
	<string name="correct_answer">The correct answer is:</string>
	<string name="you_have_unlocked">You have unlocked</string>
	
    <string-array name="tutorial_texts">
        <item>Welcome to Space Cards, a little game about knowledge of our mother Earth.</item>
        <item>Here, you can learn about the weather phenomenoms, growing civilizations and other cool stuffs</item>
        <item>Just choose a category, pick a level and start the learning and fun. We hope you enjoy it.</item>
        <item>If there is any problem please let us to know it!</item>
    </string-array>
    
    <string-array name="titles_categories">
        <item>Water</item>
        <item>Manmade</item>
        <item>Landforms</item>
        <item>Cities</item>
        <item>Nighttime</item>
        <item>Weather</item>
    </string-array>
    <string-array name="descriptions_categories">
        <item>72%% of the Earth is Covered by water and more than 95%% of that water can be found in our oceans and about 2%% is frozen in glaciers and ice caps.</item>
        <item>Humans may not be visible from space, but their effects on the planet are.</item>
        <item>As a element of the topography, and part of the terrain of our planet, landforms are sculpted by deposition of sediment and molded by erosion and other natural forces into beautiful artwork seen from space.</item>
        <item>Cities generally have complex systems for sanitation, utilities, land usage, housing, and transportation. The concentration of development greatly facilitates</item>
    	<item>Even when the sun goes down, the lights don\'t go out. Light pollution creates a map of human habitation when above it and hides the light from stars from those below it.</item>
    	<item>Most weather phenomena take place in the troposphere, which is the lowest layer of the atmosphere. The troposphere contains 80%% of the atmosphere\'s mass and 99%% of its water vapor and aerosols.</item>
    </string-array>
    <array name="images_categories">
        <item>@drawable/water</item>
        <item>@drawable/manmade</item>
        <item>@drawable/landforms</item>
        <item>@drawable/cities2</item>
        <item>@drawable/nighttime</item>
        <item>@drawable/weather</item>
    </array>
    <string-array name="level_options">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Expert</item>
    </string-array>
    <string-array name="dummy_answers">
        <item>a) Answer one</item>
        <item>b) Answer dos</item>
        <item>c) Answer three</item>
        <item>d) Answer four</item>
    </string-array>
    
    <string-array name="achievements_names">
        <item>UFO</item>
        <item>Spaceman</item>
        <item>Jupiter</item>
        <item>Mars men</item>
        <item>Galaga</item>
        <item>Pluton</item>
        <item>Intelsat</item>
        <item>Burning Sun</item>
    </string-array>
    <string-array name="achievements_descriptions">
        <item>Play 5 times</item>
        <item>Play 10 times</item>
        <item>Answer correctly 15+ questions on hard</item>
        <item>Win a game on expert</item>
        <item>Win a game on each category</item>
        <item>Win a game on hard</item>
        <item>Found the secret satellite</item>
        <item>Play 20 times</item>
    </string-array>
    <array name="achievements_icons">
        <item>@drawable/ac_alien</item>
        <item>@drawable/ac_cohete</item>
        <item>@drawable/ac_jupiter</item>
        <item>@drawable/ac_marte</item>
        <item>@drawable/ac_milkyway</item>
        <item>@drawable/ac_pluton</item>
        <item>@drawable/ac_satelite</item>
        <item>@drawable/ac_sol</item>
    </array>
    <array name="achievements_icons_disabled">
        <item>@drawable/ac_dis_alien</item>
        <item>@drawable/ac_dis_cohete</item>
        <item>@drawable/ac_dis_jupiter</item>
        <item>@drawable/ac_dis_marte</item>
        <item>@drawable/ac_dis_milkyway</item>
        <item>@drawable/ac_dis_pluton</item>
        <item>@drawable/ac_dis_satelite</item>
        <item>@drawable/ac_dis_sol</item>
    </array>
    <string name="about_spaceapps">
	    The International Space Apps Challenge is a two-day hackathon where teams of technologists, scientists, designers, artists, educators, entrepreneurs, developers and students across the globe collaborate and engage with publicly available data to design innovative solutions for global challenges.
	</string>
	<string name="about_uvdroids">
		We are from Xalapa city, we are mobile developers and designers and we like participating in a different competitions related to development or technology.	</string>
	<string name="about_spacecards">
		The game let users play with different cards, each card contains a question and an image from certain category,  users have to chose the correct answer for each question, SpaceCards game let you share your score with your friends and also you can share the app.
	</string>
</resources>
