<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone"
    android:orientation="vertical" >
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:id="@+id/resume_game"
	    android:text="@string/resume"/>
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:id="@+id/settings_pause"
	    android:text="@string/settings"/>
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:id="@+id/exit_game"
	    android:text="@string/back"/>
</LinearLayout>
