<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/settings"
        android:gravity="center"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/settings"/>

    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/achievements"
        android:gravity="center"
        android:padding="10dp"
        android:layout_above="@id/settings"
        android:id="@+id/achievements"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/leaderboard"
        android:gravity="center"
        android:padding="10dp"
        android:layout_above="@id/achievements"
        android:id="@+id/leaderboard"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/play"
        android:gravity="center"
        android:padding="10dp"
        android:layout_above="@id/leaderboard"
        android:id="@+id/play"/>
</RelativeLayout>
