<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="#ac202020"
	    android:gravity="center"
	    android:id="@+id/score_screen_wrong"
	    android:visibility="gone"
	    android:orientation="vertical">
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="32sp"
	        android:textColor="#FF0000"
	        android:textStyle="bold"
	        android:layout_margin="20dp"
	        android:text="@string/wrong"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="24sp"
	        android:textColor="#FFFFFF"
	        android:textStyle="bold"
	        android:text="@string/score_text"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="28sp"
	        android:textColor="#FFFFFF"
	        android:textStyle="bold"
	        android:id="@+id/score_counter"
	        android:layout_margin="20dp"/>
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="40dp"
	        android:id="@+id/next"
	        android:layout_marginRight="40dp"
	        android:text="@string/next"
	        />
	</LinearLayout>
