<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"/>
     <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicatorQuestions"
        android:background="#000000"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5dp"
        app:selectedColor="#FFCC0000"
        app:fadeDelay="1000"
        app:fadeLength="1000"
        />
     <mx.uvdroids.spacecards.adapters.CustomViewPager
        android:id="@+id/viewPagerQuestions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/indicatorQuestions">
    </mx.uvdroids.spacecards.adapters.CustomViewPager>
    <LinearLayout
        android:id="@+id/screen_pause"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:padding="30dp"
	    android:layout_centerInParent="true"
	    android:visibility="gone"
	    android:background="@drawable/card"
	    android:orientation="vertical" >
		<Button 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="40dp"
		    android:layout_marginRight="40dp"
		    android:textSize="28sp"
	        android:textStyle="bold"
	        android:textColor="#e25e03"
	        android:background="@android:color/transparent"
	        android:fontFamily="sans-serif-light"
		    android:id="@+id/resume"
		    android:text="@string/resume"/>
		<Button 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="40dp"
		    android:layout_marginTop="20dp"
		    android:layout_marginRight="40dp"
		    android:id="@+id/settings_pause"
		    android:textSize="28sp"
	        android:textStyle="bold"
	        android:textColor="#e25e03"
	        android:background="@android:color/transparent"
	        android:fontFamily="sans-serif-light"
		    android:text="@string/settings"/>
		<Button 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="40dp"
		    android:layout_marginRight="40dp"
		    android:layout_marginTop="20dp"
		    android:id="@+id/exit_game"
		    android:textSize="28sp"
	        android:textStyle="bold"
	        android:textColor="#e25e03"
	        android:background="@android:color/transparent"
	        android:fontFamily="sans-serif-light"
		    android:text="@string/back"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/card"
	    android:padding="20dp"
	    android:layout_centerInParent="true"
	    android:gravity="center"
	    android:id="@+id/screen_correct"
	    android:visibility="gone"
	    android:orientation="vertical">
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="32sp"
	        android:textColor="#e25e03"
	        android:id="@+id/score_text"
	        android:textStyle="bold"
	        android:layout_margin="20dp"
	        android:text="@string/correct"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="24sp"
	        android:textColor="#000000"
	        android:textStyle="bold"
	        android:text="@string/score_text"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="28sp"
	        android:textColor="#000000"
	        android:textStyle="bold"
	        android:id="@+id/score_counter"
	        android:text="@string/score_text"
	        android:layout_margin="20dp"/>
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="40dp"
	        android:id="@+id/next"
	        android:layout_marginRight="40dp"
	        android:text="@string/next"
	        android:textSize="28sp"
	        android:textStyle="bold"
	        android:textColor="#e25e03"
	        android:background="@android:color/transparent"
	        android:fontFamily="sans-serif-light"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/card"
	    android:layout_centerInParent="true"
	    android:padding="20dp"
	    android:gravity="center"
	    android:id="@+id/screen_wrong"
	    android:visibility="gone"
	    android:orientation="vertical">
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="32sp"
	        android:textColor="#e25e03"
	        android:textStyle="bold"
	        android:layout_margin="10dp"
	        android:text="@string/wrong"/>
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:textColor="#000000"
	        android:layout_margin="10dp"
	        android:text="@string/correct_answer"/>
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="22sp"
	        android:id="@+id/screen_wrong_correct"
	        android:textColor="#000000"
	        android:layout_marginBottom="30dp"
	        android:layout_margin="10dp"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="24sp"
	        android:textColor="#000000"
	        android:textStyle="bold"
	        android:text="@string/score_text"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="28sp"
	        android:textColor="#000000"
	        android:textStyle="bold"
	        android:id="@id/score_counter"
	        android:layout_margin="10dp"/>
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="40dp"
	        android:id="@id/next"
	        android:textSize="28sp"
	        android:textStyle="bold"
	        android:textColor="#e25e03"
	        android:background="@android:color/transparent"
	        android:fontFamily="sans-serif-light"
	        android:layout_marginRight="40dp"
	        android:text="@string/next"
	        />
	</LinearLayout>
</RelativeLayout>